# hallucination

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
benchmarks/: comparison.json  comparison.md  dataset.json  dola.json  dola.md  results.json  results.md  run_benchmark.py  run_comparison.py  run_dola.py
benchmarks/corpus/: amazon.txt  eiffel.txt  everest.txt  great_wall.txt  heart.txt  himalayas.txt  honeybees.txt  moon.txt  nepal.txt  pacific.txt  photosynthesis.txt  printing.txt
notebooks/: colab_live_benchmark.ipynb
scripts/: deploy_space.py
skills/hallucination-reduction/: SKILL.md
src/veritas/: __init__.py  chunking.py  claims.py  graph.py  llm.py  local.py  metrics.py  pipeline.py  prompts.py  retrieval.py  verification.py
src/veritas/techniques/: __init__.py  base.py  calibration.py  decoding.py  graph_rag.py  guardrails.py  multi_agent.py  nli.py  quote_grounding.py  semantic_entropy.py  wrappers.py
src/veritas_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_calibration_metrics.py  test_chunking.py  test_claims.py  test_decoding.py  test_graph.py  test_llm_adapters.py  test_local.py  test_metrics.py  test_pipeline.py  test_retrieval.py  test_techniques.py  test_verification.py
